# simple_xegl

./: CMakeLists.txt  README.md  main.cpp
